--- a/config.toml
+++ b/config.toml
@@ -22,3 +22,7 @@ theme = "hugo-theme-console"
   [[params.navlinks]]
   name = "photos/"
   url = "photos/"
+
+  [[params.navlinks]]
+  name = "fiction/"
+  url = "fiction/"
