no more photo nav and
georgia font change  deleted photo stack as well

--- a/config.toml
+++ b/config.toml
@@ -19,9 +19,9 @@ theme = "hugo-theme-console"
   name = "posts/"
   url = "posts/"
   
-  [[params.navlinks]]
-  name = "photos/"
-  url = "photos/"
+  # [[params.navlinks]]
+  # name = "photos/"
+  # url = "photos/"
 
   [[params.navlinks]]
   name = "fiction/"
